[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://frontend/ui/main.gd" id="1"]

[node name="Main" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0980392, 0.105882, 0.12549)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_left = 40
custom_constants/margin_top = 40
custom_constants/margin_right = 40
custom_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/VBox"]
text = "Godot4 Universal Game Framework Demo"
horizontal_alignment = 1
vertical_alignment = 1
add_theme_color_override("font_color", Color(0.929412, 0.933333, 0.945098))

[node name="LoginRow" type="HBoxContainer" parent="MarginContainer/VBox"]
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="EmailInput" type="LineEdit" parent="MarginContainer/VBox/LoginRow"]
size_flags_horizontal = 3
placeholder_text = "Email"

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/VBox/LoginRow"]
size_flags_horizontal = 3
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="MarginContainer/VBox/LoginRow"]
text = "Sign In"

[node name="GuestButton" type="Button" parent="MarginContainer/VBox/LoginRow"]
text = "Guest Login"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox"]
text = "Please sign in to continue"
add_theme_color_override("font_color", Color(0.784314, 0.823529, 0.913725))

[node name="ProfilePanel" type="PanelContainer" parent="MarginContainer/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 1
visible = false

[node name="ProfileVBox" type="VBoxContainer" parent="MarginContainer/VBox/ProfilePanel"]
custom_constants/separation = 6
margin_left = 12
margin_top = 12
margin_right = 12
margin_bottom = 12

[node name="NicknameLabel" type="Label" parent="MarginContainer/VBox/ProfilePanel/ProfileVBox"]
text = "Nickname: -"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBox/ProfilePanel/ProfileVBox"]
text = "Level: -"

[node name="CurrencyLabel" type="Label" parent="MarginContainer/VBox/ProfilePanel/ProfileVBox"]
text = "Gold: 0 | Gems: 0"

[node name="ProfileButtons" type="HBoxContainer" parent="MarginContainer/VBox/ProfilePanel/ProfileVBox"]
custom_constants/separation = 12

[node name="SyncButton" type="Button" parent="MarginContainer/VBox/ProfilePanel/ProfileVBox/ProfileButtons"]
text = "Sync Cloud Save"

[node name="StoreButton" type="Button" parent="MarginContainer/VBox/ProfilePanel/ProfileVBox/ProfileButtons"]
text = "Open Store"

[node name="StorePanel" type="Panel" parent="MarginContainer/VBox"]
size_flags_horizontal = 3
visible = false

[node name="StoreVBox" type="VBoxContainer" parent="MarginContainer/VBox/StorePanel"]
margin_left = 12
margin_top = 12
margin_right = 12
margin_bottom = 12
custom_constants/separation = 8

[node name="StoreTitle" type="Label" parent="MarginContainer/VBox/StorePanel/StoreVBox"]
text = "Store"
horizontal_alignment = 1

[node name="StoreScroll" type="ScrollContainer" parent="MarginContainer/VBox/StorePanel/StoreVBox"]
custom_minimum_size = Vector2(0, 160)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProductList" type="VBoxContainer" parent="MarginContainer/VBox/StorePanel/StoreVBox/StoreScroll"]
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="CloseStoreButton" type="Button" parent="MarginContainer/VBox/StorePanel/StoreVBox"]
text = "Close"

[node name="PurchaseFeedback" type="Label" parent="MarginContainer/VBox"]
text = ""
add_theme_color_override("font_color", Color(0.952941, 0.807843, 0.360784))
